change in json file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nirav/composertesting",
+    "name": "nirav-dobariya/composertesting",
     "description": "\"for create\"",
     "type": "library",
     "autoload": {
